HomeWork-07 - delete in memory repository with Apache Ignite